--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<h1>hello i'm ken</h1>
-061-246-4549<br/>
-<br/>
-สวัสดีครับ<br/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    Hello 66011340 Chinnawat Silathanasan
+</body>
+</html>
